--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!-- add icon link -->
   <link rel="icon" href="./logo1.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/44207887b0.js" crossorigin="anonymous"></script>
